# vision

./: .dockerignore  .gitignore  Dockerfile  README.md  bentofile.yaml  pyproject.toml  requirements.txt  service.py  vision.yaml
docs/: readme.md
src/: main.py
src/agents/vision_review_agent/: main.py
src/core/: config.py
src/schemas/: vision.py
src/services/: vision_detection_service.py
src/vision/: annotation.py  image_loader.py
