[project]
name = "safety-vision"
version = "0.1.0"
description = "Safety vision inference API served with BentoML"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "python-multipart==0.0.20",
    "pillow==11.2.1",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "ultralytics==8.3.129",
    "bentoml>=1.4.0,<2.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
